# pearson-pdf-cleaner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pearson_pdf_cleaner/: __init__.py  cli.py  core.py
