[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pearson-pdf-cleaner"
version = "0.1.0"
description = "Remove Pearson TT2 watermarks from PDFs"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pypdf>=4.0.0",
 "pikepdf>=9.0.0",
]

[project.scripts]
pearson-pdf-cleaner = "pearson_pdf_cleaner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pearson_pdf_cleaner"]
include = ["src/pearson_pdf_cleaner/py.typed"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
